style/refactor(About): for 2460, increased section's width; increased tupography-body font size, added margin-y to the matcha-spot img, increased h3's titles font sizes. Added id to imgs (MatchaProducts, Founders and Matcha-spot) and increased their max-width. Added gap-x class for about section's text blocks and corrected values accordingly. Added margin-bottom to the Certification block

--- a/src/index.css
+++ b/src/index.css
@@ -294,6 +294,14 @@
   }
 }
 
+@media (min-width: 1536px) {
+  :root {
+    .about-text-gap-x {
+      column-gap: 6rem;
+    }
+  }
+}
+
 @media (min-width: 1920px) {
   :root {
     .history-carousel-img {
@@ -332,6 +340,19 @@
     .section-title {
       font-size: 7rem;
     }
+    .typography-body {
+      font-size: 1.5rem;
+    }
+    #founders-img {
+      max-width: 18vw;
+    }
+    #matcha-products {
+      max-width: 18vw;
+      padding-right: 0;
+    }
+    .h3-title {
+      font-size: 3.5rem;
+    }
     .section-width {
       max-width: 92rem;
     }
@@ -343,6 +364,9 @@
     }
     .history-carousel-img {
       width: 16vw;
+    }
+    .about-text-gap-x {
+      column-gap: 10rem;
     }
   }
 }
